--- a/index.css
+++ b/index.css
@@ -29,19 +29,15 @@ html, body{
 
 /* About */     
 #about_wrapper {
-    margin: 0 auto;
-    max-width: 100%;
-    align-items: center;
-    justify-content: center;
+    margin: 40px auto;
+    margin-bottom: 100px;
     color: rgb(114, 120, 120);
     height: auto;
     max-width: 1100px;
-    margin: auto;
 }
 
 .about_title {
     margin: 0 auto;
-    padding: 0 20px;
     padding-bottom: 0;
     text-align: center;
     color: lightseagreen;
@@ -58,23 +54,22 @@ html, body{
 .about_container {
     width: 100%;
     height: auto;
-    align-items: center;
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
     flex-flow: wrap;
 }
 
 .about_details {
     display: flex;
-    width: 25%;
+    width: 30%;
     justify-content: space-around;
 }
 
 .about_details h3 {
     position: absolute;
 }
-
 
 .about_details .about_details_wrapper, .info_container {
     margin-top: 70px;
@@ -86,7 +81,7 @@ html, body{
     padding-left: 0;
 }
 
-@media screen and (max-width: 977px) {
+@media (max-width: 977px) {
     .about_details {
         width: 70%;
         text-align: justify;
@@ -94,7 +89,7 @@ html, body{
     }
 }
 
-@media screen and (max-width: 600px) {
+@media (max-width: 600px) {
     .about_details{
         width: 80%;
     }
@@ -104,16 +99,121 @@ html, body{
     }
 }
 
-@media screen and (max-width: 420px) {
+@media (max-width: 420px) {
     #introduction_wrapper {
         background-attachment: scroll;
         height: 810px;
     }
 }
 
-@media screen and (max-width: 400px) {
+@media (max-width: 400px) {
     #introduction_wrapper {
         background-attachment: scroll;
         height: 620px;
+    }
+}
+
+/* Learned */
+
+#learned_wrapper {
+    height: auto;
+    background-image: url("background5.jpg");
+    color: #434242;
+    letter-spacing: 0.1em;
+    line-height: 2em;
+}
+
+.learned_title {
+    margin: 0 auto;
+    max-width: 1100px;
+    padding: 20px 0 0 0;
+}
+
+.learned_title h2 {
+    text-align: center; 
+    color: lightseagreen; 
+    font-size: 40px;;
+    padding: 25px;
+}
+
+.learned_title p {
+    text-align: center;
+    text-transform: none;
+    padding-bottom: 25px;
+    font-size: 20px;
+    border-bottom: 1px solid lightseagreen;
+}
+
+.learned_container {
+    margin: auto;
+    width: 1000px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+}
+
+.learned_details {
+    color: #ffffff;
+    padding: 20px;
+    border: 1px solid black;
+    background-color: #333;
+}
+
+.learned_details .list_container {
+    border: #ffffff;
+}
+
+.centered_box {
+    display: flex;
+    grid-column: span 2;
+    justify-content: center;
+}
+
+.centered_box img {
+    border: 1px solid white;
+}
+
+
+
+
+
+
+.learned_details table, th, td {
+    text-align: center;
+    border: 2px solid #ffffff;
+    border-collapse: collapse;
+    padding: 25px;
+    text-align: left;
+}
+
+.learned_details th {
+    text-align: center;
+}
+
+.learned_details tr:nth-child(even) {
+    background-color: #dddddd;
+}
+
+@media (max-width: 1017px) {
+    .learned_container {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-items: center;
+        width: 100%;
+    }
+
+    .learned_details table {
+        padding: 5px;
+    }
+
+    .learned_details img {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+
+    .learned_details {
+        
     }
 }
