--- a/index.css
+++ b/index.css
@@ -182,7 +182,7 @@ html, body{
     text-align: center;
     border: 2px solid #ffffff;
     border-collapse: collapse;
-    padding: 25px;
+    padding: 15px;
     text-align: left;
 }
 
@@ -195,25 +195,26 @@ html, body{
 }
 
 @media (max-width: 1017px) {
+
+    .learned_title h2{
+        color: white;
+    }
+
     .learned_container {
         display: flex;
         flex-direction: column;
-        flex-wrap: wrap;
         align-items: center;
-        width: 100%;
+        width: 90%;
     }
 
-    .learned_details table {
+    .learned_details table, tr {
         padding: 5px;
+        font-size: 12px;
     }
 
     .learned_details img {
         display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
+        align-content: space-between;
     }
 
-    .learned_details {
-        
-    }
 }
