--- a/index.css
+++ b/index.css
@@ -131,7 +131,7 @@ html, body{
 
 .learned_title h2 {
     text-align: center; 
-    color: lightseagreen; 
+    color: #ffffff; 
     font-size: 40px;;
     padding: 25px;
 }
@@ -196,15 +196,13 @@ html, body{
 
 @media (max-width: 1017px) {
 
-    .learned_title h2{
-        color: white;
-    }
-
     .learned_container {
         display: flex;
+        flex-wrap: wrap;
         flex-direction: column;
-        align-items: center;
+        justify-content: space-around;
         width: 90%;
+        height: 1680px;
     }
 
     .learned_details table, tr {
