--- a/index.css
+++ b/index.css
@@ -118,6 +118,7 @@ html, body{
 #learned_wrapper {
     height: auto;
     background-image: url("background5.jpg");
+    background-attachment: fixed;
     color: #434242;
     letter-spacing: 0.1em;
     line-height: 2em;
@@ -155,8 +156,9 @@ html, body{
 .learned_details {
     color: #ffffff;
     padding: 20px;
-    border: 1px solid black;
+    border: 1px solid white;
     background-color: #333;
+    
 }
 
 .learned_details .list_container {
@@ -194,7 +196,7 @@ html, body{
     background-color: #dddddd;
 }
 
-@media (max-width: 1017px) {
+@media (max-width: 480px) {
 
     .learned_container {
         display: flex;
@@ -210,9 +212,16 @@ html, body{
         font-size: 12px;
     }
 
+    .learned_details .pictures_container {
+        display: flex;
+        flex-direction: column;
+    }
+
     .learned_details img {
         display: flex;
-        align-content: space-between;
+        flex-direction: column;
+        margin: auto;
     }
+
 
 }
