--- a/index.css
+++ b/index.css
@@ -2,16 +2,19 @@
     box-sizing: border-box;
 }
 
-html, body{
+html, body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
+}
+
+h2 {
+    text-transform: uppercase;
 }
 
 /* Introduction */
 #introduction_wrapper
 {
     background-image: url("background4.jpg");
-    
     background-position: center center;
     background-attachment: fixed;
     background-color: #606060FF;
@@ -24,7 +27,6 @@ html, body{
 
 .introduction_title {
     color: #ffffff;
-    
 }
 
 /* About */     
@@ -41,23 +43,24 @@ html, body{
     padding-bottom: 0;
     text-align: center;
     color: lightseagreen;
-    font-size: 40px;
+    font-size: 30px;
+    text-transform: uppercase;
 }
 
 .about_title p {
-    color: rgb(114, 120, 120);
+    color: #434242;
     text-transform: none;
     padding-bottom: 25px;
     font-size: 20px;
 }
 
 .about_container {
+    font-family: 'Raleway', sans-serif;
     width: 100%;
     height: auto;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
     flex-flow: wrap;
 }
 
@@ -136,11 +139,13 @@ html, body{
 .learned_title h2 {
     text-align: center; 
     color: #ffffff; 
-    font-size: 40px;;
+    font-size: 40px;
+    line-height: 1em;
     padding: 25px;
 }
 
 .learned_title p {
+    font-family: 'Raleway', sans-serif;
     text-align: center;
     text-transform: none;
     padding-bottom: 25px;
@@ -150,6 +155,7 @@ html, body{
 }
 
 .learned_container {
+    font-family: 'Roboto', sans-serif;
     margin: auto;
     padding-bottom: 50px;
     width: 1000px;
@@ -191,6 +197,10 @@ html, body{
     background-color: #8c8c8c;
 }
 
+.list_details > h3{
+    font-family: 'Roboto', sans-serif;
+}
+
 .list_container strong:hover {
     background-color: lightseagreen;
     border-radius: 2px;
@@ -224,6 +234,73 @@ html, body{
         margin: auto;
         margin-bottom: 15px;
     }
+}
 
+/* Footer */
+
+#footer_wrapper {
+    margin-top: -59.3px;
+    height: 970px;
+    background-color: #141414;
+    letter-spacing: 0.1em;
+    line-height: 2em;
+}
+
+.footer_title {
+    padding-top: 25px;
+    color: #4e5f6b;
+    margin: auto;
+    width: 500px;
+}
+
+.footer_title p {
+    font-size: 20px;
+}
+
+footer .social {
+    display: flex;
+
+    margin: 25px;
+    
+    width: 10%;
+    justify-content: center;
+    margin: auto;
+}
+
+footer .social a {
+    margin-top: 100px;
+    padding-left: 20px;
+    padding-right: 20px;
+    color: #eb5349;
+    text-align: center;
+    text-decoration: none;
+    font-size: 20px;
+}
+
+footer .social a:hover {
+    background-color: #4e5f6b;
+    color: #fc0e00;
+    border-radius: 5px;
+    transition: ease 1s;
+}
+
+footer .copyright {
+    display: flex;
+    justify-content: center;
+    color: #ffffff;
+    padding: 15px;
+    align-items: flex-end;
+    height: 56%;
+}
+
+@media (max-width: 500px) {
+
+    #footer_wrapper {
+        height: 760px;
+    }
+
+    .footer_title {
+        width: 310px;
+    }
 
 }
