--- a/index.css
+++ b/index.css
@@ -26,6 +26,8 @@ h2 {
 }
 
 .introduction_title {
+    text-transform: uppercase;
+    font-size: 25px;
     color: #ffffff;
 }
 
@@ -211,6 +213,7 @@ h2 {
 @media (max-width: 500px) {
 
     .learned_container {
+        
         display: flex;
         flex-wrap: wrap;
         flex-direction: column;
@@ -240,6 +243,7 @@ h2 {
 /* Footer */
 
 #footer_wrapper {
+    border-top: 2px solid #ffffff;
     margin-top: -59.3px;
     height: 970px;
     background-color: #141414;
